<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TempActivity"
    >

    <TextView
        android:id="@+id/label_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/label_symptoms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/temp"
        android:layout_marginTop="@dimen/large_spacer"
        android:text="@string/label_temp"
        style="@style/Text.Label"
        />

    <EditText
        android:id="@+id/temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_temp"
        app:layout_constraintStart_toEndOf="@+id/label_temp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/medium_spacer"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:hint="@string/prompt_temp"
        />

    <TextView
        android:id="@+id/label_symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_temp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/medium_spacer"
        android:selectAllOnFocus="true"
        android:text="@string/label_symptoms"
        style="@style/Text.Label"
        />

    <CheckBox
        android:id="@+id/symptom_cough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_symptoms"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/medium_spacer"
        android:text="@string/label_cough"
        />

    <CheckBox
        android:id="@+id/symptom_tired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/symptom_cough"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/medium_spacer"
        android:text="@string/label_tired"
        />

    <CheckBox
        android:id="@+id/symptom_breathing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/symptom_tired"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/medium_spacer"
        android:text="@string/label_breathing"
        />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/action_add"
        android:enabled="false"
        tools:targetApi="lollipop"
        />

</androidx.constraintlayout.widget.ConstraintLayout>